WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
274563
[UnifiedPDF] Crash in UnifiedPDFPlugin::repaintForIncrementalLoad() loading charbonnelchocolates.com page
https://bugs.webkit.org/show_bug.cgi?id=274563
Summary
[UnifiedPDF] Crash in UnifiedPDFPlugin::repaintForIncrementalLoad() loading c...
Simon Fraser (smfr)
Reported
2024-05-22 18:24:28 PDT
charbonnelchocolates.com/shop crashes with UnifiedPDF.
Attachments
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2024-05-22 18:24:41 PDT
<
rdar://128316806
>
Simon Fraser (smfr)
Comment 2
2024-05-22 18:27:01 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28963
EWS
Comment 3
2024-05-23 08:30:52 PDT
Committed
279203@main
(35f09068c7e2): <
https://commits.webkit.org/279203@main
> Reviewed commits have been landed. Closing PR #28963 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug