[UnifiedPDF] Crash in UnifiedPDFPlugin::repaintForIncrementalLoad() loading charbonnelchocolates.com page https://bugs.webkit.org/show_bug.cgi?id=274563 rdar://128316806

Reviewed by Abrar Rahman Protyasha.

repaintForIncrementalLoad() can get called before the main thread has a PDFDocument or has created any layers,
so early return in that case. This web page has a `display:none` iframe with PDF contents, which triggered
this crash.

* LayoutTests/http/tests/pdf/linearized-pdf-in-display-none-iframe-expected.txt: Added.
* LayoutTests/http/tests/pdf/linearized-pdf-in-display-none-iframe.html: Copied from LayoutTests/http/tests/pdf/linearized-pdf-in-iframe.html.
* LayoutTests/http/tests/pdf/linearized-pdf-in-iframe.html:
* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::UnifiedPDFPlugin::repaintForIncrementalLoad):

Canonical link: https://commits.webkit.org/279203@main